# stMMR

./: LICENSE  README.md  pyproject.toml  requirements.txt  run_Breast_Cancer.py  run_Chicken_Heart.py  run_DLPFC.py  run_Mouse_Brain.py  run_PDAC.py  run_nano91.py  setup.py
Tutorial/: DLPFC_mutil-slice.ipynb  dpt_pseudotime.ipynb  enchance_gene.ipynb  run_10x.ipynb  run_HD.ipynb
metadata/: DLPFC_domain_specific_gene.xlsx
stMMR/: __init__.py  layers.py  models.py  process.py  train_model.py  utils.py
